--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@
   box-sizing: border-box; 
 }
 
+body {
+  font-family: "Merienda", cursive;
+}
+
 .link {
   text-decoration: none;
   color: inherit;
@@ -34,7 +38,6 @@
 }
 
 .btn {
-  border: none;
   cursor: pointer;
 }
 
@@ -50,6 +53,28 @@
           clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.container {
+  margin: 0 auto;
+}
+
+/* blank */
+
+.blank {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.left_part {
+  max-width: 50%;
+  padding-right: 20px;
+}
+
+.right_part {
+  max-width: 50%;
+  padding-left: 20px;
 }
 
 /* index */
