--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,14 @@
 
 /* variables */
 
+:root {
+  --black: #000000;
+  --white: #ffffff;
+  --beige-light: #ead5be;
+  --beige-dark: #b8a36e;
+  --wood: #5f4632;
+}
+
 /* global */
 
 *, *::before, *::after { 
@@ -18,7 +26,14 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: "Merienda", cursive;
+  font-size: 14px;
+  line-height: 20.22px;
+  font-weight: 400;
+  font-style: normal;
+  color: #000000;
 }
 
 .link {
@@ -59,22 +74,11 @@ body {
   margin: 0 auto;
 }
 
-/* blank */
-
-.blank {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.left_part {
-  max-width: 50%;
-  padding-right: 20px;
-}
-
-.right_part {
-  max-width: 50%;
-  padding-left: 20px;
+.module-title {
+  margin: 0;
+  padding: 0;
+  font-size: 24px;
+  line-height: 35px;
 }
 
 /* index */
