--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 :root {
   --black: #000000;
   --white: #ffffff;
+  --card-white: rgba(255, 255, 255, 0.65);
   --beige-light: #ead5be;
   --beige-dark: #8e825c;
   --wood: #5f4632;
@@ -97,7 +98,7 @@ body {
   margin: 0 auto;
 }
 
-.module-title {
+.module__title {
   margin: 0 0 20px;
   padding: 0;
   font-size: 24px;
@@ -157,6 +158,7 @@ body {
 .navigation__link {
   color: var(--white);
   font-size: 12px;
+  font-weight: 400;
   line-height: 17px;
   text-shadow: var(--shadow-light);
 }
@@ -211,6 +213,69 @@ body {
 
 .about__text:not(:last-child) {
   margin-bottom: 20px;
+}
+
+/* our best */
+
+.our-best {
+  padding-top: 80px;
+  padding-bottom: 110px;
+  background-color: var(--beige-light);
+  background-image: url("../img/paper-bg.png");
+  background-repeat: repeat-y;
+  background-position: center top;
+}
+
+.our-best__title {
+  margin-bottom: 30px;
+}
+
+.goods {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.good {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  width: 220px;
+  min-height: 240px;
+  background-color: var(--card-white);
+  padding: 22px 20px;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+
+.good:not(:last-child) {
+  margin-right: 71px;
+}
+
+.good__img-wrap {
+  display: flex;
+  margin: 0;
+}
+
+.good__title {
+  margin: 0;
+  margin-top: 14px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+}
+
+.good__price {
+  margin: 0;
+  align-self: self-end;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
 }
 
 /* other */
