--- a/css/style.css
+++ b/css/style.css
@@ -302,3 +302,76 @@ body {
 .footer .navigation__link {
   color: var(--black);
 }
+
+/* СТРАНИЦА Coffee */
+
+.page--coffee .header {
+  min-height: 260px;
+  background-image: url("../img/coffee-bg.jpg");
+  padding-top: 30px;
+  padding-bottom: 80px;
+  background-size: cover;  
+}
+
+.page--coffee .hero {
+  padding-top: 60px;
+  padding-bottom: 0;
+}
+
+.page--coffee .hero__title {
+  margin-bottom: 0;
+}
+
+.about-beans {
+  padding-top: 70px;
+  padding-bottom: 60px;
+}
+
+.about-beans .container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: center;
+}
+
+.about-beans__img-wrap {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 57px;
+}
+
+.about-beans__img {
+  filter: drop-shadow(5px 5px 30px rgba(0, 0, 0, 0.25));
+}
+
+.about-beans__info {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 22px;
+}
+
+.about-beans .content {
+  max-width: 346px;
+}
+
+.about-beans p {
+  margin: 0;
+  text-align: center;
+} 
+
+.about-beans p:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.about-beans .devider img {
+  width: 200px;
+  height: 29.3px;
+}
+
+.about-beans .devider {
+  margin-bottom: 25px;
+}
+
