--- a/css/style.css
+++ b/css/style.css
@@ -239,18 +239,25 @@ body {
 
 .good {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   width: 220px;
   min-height: 240px;
-  background-color: var(--card-white);
   padding: 22px 20px;
   border-radius: 8px;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   -ms-border-radius: 8px;
   -o-border-radius: 8px;
+  background-color: var(--card-white);
+}
+
+.good__link {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  text-decoration: none;
 }
 
 .good:not(:last-child) {
@@ -375,3 +382,87 @@ body {
   margin-bottom: 25px;
 }
 
+/* Контейнер карточек */
+
+.cards__list {
+  max-width: 800px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 0;
+}
+
+/* Карточка товара */
+
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 220px;
+  height: 260px;
+  padding: 22px 20px;
+  background-color: var(--white);
+  filter: drop-shadow(5px 5px 35px rgba(0, 0, 0, 0.25));
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+.card_link {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  text-decoration: none;
+}
+
+.card__img-wrap {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 14px;
+}
+
+.card__img {
+  max-height: 115px;
+  max-width: 167px;
+}
+
+.card__title {
+  font-family: "Merienda", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+
+  color: #000000;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.card__country {
+  align-self: flex-end;
+  margin-bottom: 10px;
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: right;
+  color: #000000;
+}
+
+.card__price {
+  align-self: flex-end;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: right;
+  color: #000000;
+}
